fixed spacing on skill-check buttons

--- a/src/index.scss
+++ b/src/index.scss
@@ -94,7 +94,7 @@ button {
   padding-bottom: 5%;
   font-family: 'Architects Daughter', cursive;
   font-size: x-large;
-  justify-content: space-evenly;
+  // justify-content: space-evenly;
   flex-wrap: wrap;
 }
 
